--- a/.github/workflows/push_to_dockerhub.yml
+++ b/.github/workflows/push_to_dockerhub.yml
@@ -5,12 +5,17 @@ on:
       - "v*.*.*"
 jobs:
   push_to_registry:
-    name: Build and push Docker image to Docker Hub
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [14.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
     steps:
-      - name: Check out GitHub repo
-        uses: actions/checkout@v2
-      - name: Build and test app ${{ matrix.node-version }}
+      - uses: actions/checkout@v2
+      
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
@@ -18,6 +23,7 @@ jobs:
       - run: npm i
       - run: npm run build --if-present
       - run: npm test
+      
       - name: Set environment variable
         run: echo "RELEASE_VERSION=${GITHUB_REF:11}" >> $GITHUB_ENV
       - name: Test environment variable
