--- a/.github/workflows/push_to_dockerhub.yml
+++ b/.github/workflows/push_to_dockerhub.yml
@@ -37,4 +37,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: nistagram-post-service:${{ env.RELEASE_VERSION }}
+          tags: borisns/nistagram-post-service:${{ env.RELEASE_VERSION }}
